<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="title_discover">发现</string>
    <string name="title_mine">我的</string>
    <string name="title_follow">关注</string>

    <string-array name="play_mode">
        <item>随机播放</item>
        <item>单曲循环</item>
        <item>列表循环</item>
    </string-array>
    <string name="title_activity_settings_system">SettingsSystemActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="search">搜索</string>
    <string name="setting_system_theme">主题跟随系统</string>
    <string name="setting_switch_theme">切换到黑暗模式</string>
</resources>