<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_discover">

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.aliyunm.musicplayer.ui.fragment.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_follow"
        android:name="com.aliyunm.musicplayer.ui.fragment.FollowFragment"
        android:label="@string/title_follow"
        tools:layout="@layout/fragment_follow" />

    <fragment
        android:id="@+id/navigation_mine"
        android:name="com.aliyunm.musicplayer.ui.fragment.MineFragment"
        android:label="@string/title_mine"
        tools:layout="@layout/fragment_mine" />
</navigation>